--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=false
+## Temporarily disabling advanced Gradle performance features while resolving wrapper issues.
+org.gradle.configuration-cache=false
+org.gradle.parallel=false
+org.gradle.caching=true
+android.defaults.buildfeatures.buildconfig=true
