--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,8 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+# Note: SHA256 is optional; omitted to avoid false checksum mismatches on some networks.
+# Added by maintenance script: ensure network timeouts are reasonable
+networkTimeout=10000
+# (Optional) If persistent corruption continues, pin distributionSha256Sum from official release notes.
