--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,8 @@ plugins {
 android {
     namespace = "com.payflutter_pro.app"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    // ndkVersion explicitly set; comment out unless native code requires this exact version
+    // ndkVersion = "27.0.12077973"
 
     compileOptions {
         coreLibraryDesugaringEnabled true
@@ -25,12 +26,11 @@ android {
         applicationId = "com.payflutter_pro.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+    minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
-        multiDexEnabled true
-        minSdkVersion 23
+    multiDexEnabled true // (minSdk already set above via Flutter; removed duplicate)
     }
 
     buildTypes {
