--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29"/>
     <!-- Android 13+ notifications permission (only needed if using notifications) -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <!-- Declare camera features as optional so install isn't blocked on devices lacking them -->
+    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
 
     <application
             android:label="payflutter_pro"
